--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                             </div>
                             <div class="col-lg-12">
                               <fieldset>
-                                <button type="submit" id="form-submit" class="main-button-icon">Make A Reservation</button>
+                                <button type="submit" id="form-submit" class="main-button-icon" href="#top">Make A Reservation</button>
                               </fieldset>
                             </div>
                           </div>
