--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     </section>
     <!-- ***** Menu Area Ends ***** --> 
     <!-- ***** Menu Area Starts ***** -->
-    <section class="section">
+    <section class="section" id="menu">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -656,7 +656,7 @@
                             </div>
                             <div class="col-lg-12">
                               <fieldset>
-                                <button type="submit" id="form-submit" class="main-button-icon" href="#top">Make A Reservation</button>
+                                <button class="main-button-icon" href="#top">Make A Reservation</button>
                               </fieldset>
                             </div>
                           </div>
