--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                             </div>
                             <div class="col-lg-12">
                               <fieldset>
-                                <button class="main-button-icon" href="#offers">Make A Reservation</button>
+                                <a class="main-button-icon" href="#top">Make A Reservation</a>
                               </fieldset>
                             </div>
                           </div>
