--- a/index.html
+++ b/index.html
@@ -590,24 +590,24 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-form">
-                        <form id="contact" action="" method="post">
+                        <form id="contact">
                           <div class="row">
                             <div class="col-lg-12">
                                 <h4>Table Reservation</h4>
                             </div>
                             <div class="col-lg-6 col-sm-12">
                               <fieldset>
-                                <input name="name" type="text" id="name" placeholder="Your Name*">
+                                <input name="name" type="text" id="name" placeholder="Your Name*" required="">
                               </fieldset>
                             </div>
                             <div class="col-lg-6 col-sm-12">
                               <fieldset>
-                              <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email Address">
+                              <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email Address" required="">
                             </fieldset>
                             </div>
                             <div class="col-lg-6 col-sm-12">
                               <fieldset>
-                                <input name="phone" type="text" id="phone" placeholder="Phone Number*">
+                                <input name="phone" type="text" id="phone" placeholder="Phone Number*" required="">
                               </fieldset>
                             </div>
                             <div class="col-md-6 col-sm-12">
@@ -651,12 +651,12 @@
                             </div>
                             <div class="col-lg-12">
                               <fieldset>
-                                <textarea name="message" rows="6" id="message" placeholder="Message"></textarea>
+                                <textarea name="message" rows="6" id="message" placeholder="Message" required=""></textarea>
                               </fieldset>
                             </div>
                             <div class="col-lg-12">
                               <fieldset>
-                                <a class="main-button-icon" href="#top">Make A Reservation</a>
+                                <button class="main-button-icon" href="#top">Make A Reservation</button>
                               </fieldset>
                             </div>
                           </div>
