--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <div class="col-lg-4">
                     <div class="left-content">
                         <div class="inner-content">
-                            <h4>Cascara Co.</h4>
-                            <h6>BEST PLACE TO SPEND YOUR TIME</h6>
+                            <h4>Cascara</h4>
+                            <h6>RESTAURANT</h6>
                             <div class="main-white-button scroll-to-section">
                                 <a href="#reservation">Make A Reservation</a>
                             </div>
